Update /vehicle help with new commands

--- a/src/main/resources/messages/messages_cn.yml
+++ b/src/main/resources/messages/messages_cn.yml
@@ -25,6 +25,8 @@ adminDelete: "从数据中删除您手中的车辆"
 adminRefill: "给车辆加油"
 adminRepair: "修理车辆（若开启了车辆伤害功能）"
 adminGivefuel: "Give fuel to a player"
+adminNewGive: "Give a vehicle or voucher to a player"
+helpNewBuy: "Buy a vehicle or voucher for yourself"
 reloadSuccesvol: "&2你已经&a成功&2重新加载了插件！"
 notForConsole: "&c只有玩家才能做到这一点！"
 cmdNotExists: "&c此命令不存在！"
