--- a/src/main/resources/messages/messages_cs.yml
+++ b/src/main/resources/messages/messages_cs.yml
@@ -24,7 +24,9 @@ adminUpdate: "Aktualizuj plugin na nejnovější verzi"
 adminDelete: "Vymaž vozidlo ve tvé ruce z databáze"
 adminRefill: "Naplň vozidlo palivem"
 adminRepair: "Oprav vozidlo (je-li zapnuté poškozování vozidel)"
-adminGivefuel: "Give fuel to a player"
+adminGivefuel: "Dej hráči kanystr s benzínem"
+adminNewGive: "Dej hráči vozidlo nebo voucher na vozidlo"
+helpNewBuy: "Kup si vozidlo nebo voucher na vozidlo"
 reloadSuccesvol: "&2Konfigurace pluginu byla &aúspěšně &2načtena!"
 notForConsole: "&cTohle může udělat pouze hráč"
 cmdNotExists: "&cTento příkaz neexistuje"
