--- a/src/main/resources/messages/messages_de.yml
+++ b/src/main/resources/messages/messages_de.yml
@@ -25,6 +25,8 @@ adminDelete: "Entferne das Fahrzeug in deiner Hand aus den Daten."
 adminRefill: "Betanke das Fahrzeug mit Treibstoff"
 adminRepair: "Repariere das Fahrzeug (falls Fahrzeugschaden aktiviert ist)"
 adminGivefuel: "Gebe einen Spieler Benzin"
+adminNewGive: "Give a vehicle or voucher to a player"
+helpNewBuy: "Buy a vehicle or voucher for yourself"
 reloadSuccesvol: "&2Du hast &aerfolgreich &2das Plugin neugeladen!"
 notForConsole: "&cNur ein Spieler kann dies machen!"
 cmdNotExists: "&cDieser Befehl existiert nicht!"
