--- a/src/main/resources/messages/messages_en.yml
+++ b/src/main/resources/messages/messages_en.yml
@@ -24,6 +24,8 @@ adminDelete: "Remove a vehicle in your hand from the data."
 adminRefill: "Refill the vehicle with fuel"
 adminRepair: "Repair the vehicle (if vehicle damage is turned on)"
 adminGivefuel: "Give fuel to a player"
+adminNewGive: "Give a vehicle or voucher to a player"
+helpNewBuy: "Buy a vehicle or voucher for yourself"
 reloadSuccesvol: "&2You have &asuccessfully &2reloaded the plugin!"
 notForConsole: "&cOnly a player can do this!"
 cmdNotExists: "&cThis command does not exist!"
