--- a/src/main/resources/messages/messages_es.yml
+++ b/src/main/resources/messages/messages_es.yml
@@ -25,6 +25,8 @@ adminDelete: "Retire un vehículo en su mano de los datos."
 adminRefill: "Refill the vehicle with fuel"
 adminRepair: "Repair the vehicle (if vehicle damage is turned on)"
 adminGivefuel: "Give fuel to a player"
+adminNewGive: "Give a vehicle or voucher to a player"
+helpNewBuy: "Buy a vehicle or voucher for yourself"
 reloadSuccesvol: "&2Jou have &asuccessful &2reloaded the plugin!"
 notForConsole: "&cSolo un jugador puede hacer esto!"
 cmdNotExists: "&cEste comando no existe!"
