--- a/src/main/resources/messages/messages_he.yml
+++ b/src/main/resources/messages/messages_he.yml
@@ -25,6 +25,8 @@ adminDelete: "למחוק את המכונית שביד שלך לגמרי"
 adminRefill: "למלא את הרכב מחדש עם דלק"
 adminRepair: "לתקן את הרכב שלך"
 adminGivefuel: "Give fuel to a player"
+adminNewGive: "Give a vehicle or voucher to a player"
+helpNewBuy: "Buy a vehicle or voucher for yourself"
 reloadSuccesvol: "טענת מחדש את הפלאגין!"
 notForConsole: "&cרק שחקנים יכולים לעשות את זה!"
 cmdNotExists: "&cהפקודה הזו לא קיימת!"
