--- a/src/main/resources/messages/messages_ja.yml
+++ b/src/main/resources/messages/messages_ja.yml
@@ -24,6 +24,8 @@ adminDelete: "手に持っている車両をデータから削除します。"
 adminRefill: "車両に燃料を補充"
 adminRepair: "車両を修理（車両ダメージが有効な場合）"
 adminGivefuel: "プレイヤーに燃料を渡す"
+adminNewGive: "Give a vehicle or voucher to a player"
+helpNewBuy: "Buy a vehicle or voucher for yourself"
 reloadSuccesvol: "&2プラグインを&a正常に&2リロードしました！"
 notForConsole: "&cこのコマンドはプレイヤーのみ使用可能です！"
 cmdNotExists: "&cこのコマンドは存在しません！"
