--- a/src/main/resources/messages/messages_nl.yml
+++ b/src/main/resources/messages/messages_nl.yml
@@ -25,6 +25,8 @@ adminDelete: "Verwijder het voertuig in je hand uit de data."
 adminRefill: "Vul het voertuig met brandstof."
 adminRepair: "Repareer het voertuig (als voertuig damage is ingeschakeld)"
 adminGivefuel: "Geef brandstof aan een speler"
+adminNewGive: "Give a vehicle or voucher to a player"
+helpNewBuy: "Buy a vehicle or voucher for yourself"
 reloadSuccesvol: "&2Je hebt &asuccesvol &2de plugin herladen!"
 notForConsole: "&cDit kan alleen een speler doen!"
 cmdNotExists: "&cDit command bestaat niet!"
