--- a/src/main/resources/messages/messages_tr.yml
+++ b/src/main/resources/messages/messages_tr.yml
@@ -27,6 +27,8 @@ adminDelete: "Elinizdeki bir araci verilerden cikarin."
 adminRefill: "Aracın deposunu doldurun"
 adminRepair: "Aracı tamir et (hasar alma açık ise)"
 adminGivefuel: "Give fuel to a player"
+adminNewGive: "Give a vehicle or voucher to a player"
+helpNewBuy: "Buy a vehicle or voucher for yourself"
 reloadSuccesvol: "&2Eklentiyi &4başarıyla &2yeniden yüklediniz!"
 notForConsole: "&cBunu sadece bir oyuncu yapabilir!"
 cmdNotExists: "&cBu komut mevcut değil!"
