--- a/src/main/resources/messages/messages_fr.yml
+++ b/src/main/resources/messages/messages_fr.yml
@@ -24,7 +24,9 @@ adminUpdate: "Mettez à jour le plugin vers la dernière version"
 adminDelete: "Retirez un véhicule dans votre main des données."
 adminRefill: "Remplir le véhicule avec du carburant"
 adminRepair: "Réparer le véhicule (si les dommages causés par le véhicule sont allumés)"
-adminGivefuel: "Give fuel to a player"
+adminGivefuel: "Donner un jerrycan à un joueur"
+adminNewGive: "Donner un véhicule ou un bon à un joueur"
+helpNewBuy: "Acheter un véhicule ou un bon pour vous-même"
 reloadSuccesvol: "&2Tu as &aavec succès &2recharger le plugin !"
 notForConsole: "&cSeul un joueur peut le faire !"
 cmdNotExists: "&cCette commande n'existe pas !"
