feat: update French translations

--- a/src/main/resources/messages/messages_fr.yml
+++ b/src/main/resources/messages/messages_fr.yml
@@ -58,13 +58,13 @@ vehicleInWater: "&cVous ne pouvez pas récupérer votre voiture si elle est sous
 vehicleFull: "&cVotre véhicule est déjà plein de carburant."
 noFuel: "&cVotre jerrycan est vide !"
 jerrycanFull: "&aVotre jerrycan est remplie !"
-useSetOwner: "&cUtilisez /vehicle setowner "
-useAddMember: "&cUtilisez /vehicle addmember "
-useRemoveMember: "&cUtilisez /vehicle removemember "
-useAddRider: "&cUtilisez /vehicle addrider "
-useRemoveRider: "&cUtilisez /vehicle removerider "
-useGiveCar: "&cUtilisez /vehicle givecar "
-useGiveVoucher: "&cUtilisez /vehicle givevoucher "
+useSetOwner: "&cUtilisez /vehicle setowner <Joueur>"
+useAddMember: "&cUtilisez /vehicle addmember <Joueur>"
+useRemoveMember: "&cUtilisez /vehicle removemember <Joueur>"
+useAddRider: "&cUtilisez /vehicle addrider <Joueur>"
+useRemoveRider: "&cUtilisez /vehicle removerider <Joueur>"
+useGiveCar: "&cUtilisez /vehicle givecar <Joueur> <carUuid>"
+useGiveVoucher: "&cUtilisez /vehicle givevoucher <Joueur> <carUuid>"
 voucherRedeem: "&aVous avez réussi à racheter votre bon !"
 updatedSucces2: "&aVotre plugin a été mis à jour. Attention, vous n'avez qu'à le restart/reload."
 updateFailed: "&cNous n'avons pas pu mettre à jour le plugin"
@@ -172,7 +172,7 @@ economyNotSetUp: "&cAucun plugin d'économie n'est connecté."
 vehicleInfoPrice: "&8&l-&r &ePrix: &6"
 useBuyCar: "&cUtilisez /vehicle buycar <carUuid>"
 useBuyVoucher: "&cUtilisez /vehicle buyvoucher <carUuid>"
-useGiveFuel: "&cUtilisez /vehicle givefuel <Joueur> <fuel>"
+useGiveFuel: "&cUtilisez /vehicle givefuel <Joueur> <carburant>"
 giveFuelSuccess: "&6Tu as donné &c%l%&6 d'essence à &c%p%&6!"
 useVehicleDespawn: "&cUtilisez /vehicle despawn <licensePlate>"
 noVehicleToDespwawn: "&cIl n'y a aucun véhicule comme ça."
@@ -182,13 +182,13 @@ fuelTooHigh: "&cLe carburant ne peut pas être au dessus de 100."
 mustBeInteger: "&cLa valeur doit être un nombre entier."
 mustBeDouble: "&cLa valeur doit être un nombre décimal."
 mustBeBoolean: "&cLa valeur doit être sur true (vrai) ou false (faux)."
-useNewVehicleGive: "&cUse /vehicle give <Player> <VehicleName> [--voucher:true]"
-useNewVehicleBuy: "&cUse /vehicle buy <VehicleName> [--voucher:true]"
-noInventorySpace: "&cThere is not enough space in the player's inventory to give them the vehicle. Please, remove some items first."
+useNewVehicleGive: "&cUtilisez /vehicle give <Joueur> <NomDuVéhicule> [--voucher:true]"
+useNewVehicleBuy: "&cUtilisez /vehicle buy <NomDuVéhicule> [--voucher:true]"
+noInventorySpace: "&cIl n'y a pas assez d'espace dans l'inventaire du joueur pour lui donner le véhicule. Veuillez d'abord supprimer quelques objets."
 voucherPermanent: "Permanent"
-noVaultDependency: "&cYou do not have Vault installed on your server or the plugin was unable to find it."
-vaultInfo: "&aYou are using Vault. MTVehicles is using plugin &f{plugin}&a to handle economy."
-vaultNoEconomyFound: "&cMTVehicles found Vault installed on your server but was unable to locate a hooked economy plugin. Use '/mtv vault setup' to try again."
-vaultSetupSuccess: "&aVault Economy has been successfully set up. MTVehicles will now use plugin &f{plugin}&a to handle economy."
-vaultSetupFail: "&cWe were unable to set up Vault Economy. Please, make sure you have an economy plugin installed and that it is compatible with Vault."
-vaultSetupAlreadyHooked: "&cAn economy plugin has already been found. See '/mtv vault' for more information."
+noVaultDependency: "&cVous n'avez pas Vault installé sur votre serveur ou le plugin n'a pas pu le trouver."
+vaultInfo: "&aVous utilisez Vault. MTVehicles utilise le plugin &f{plugin}&a pour gérer l'économie."
+vaultNoEconomyFound: "&cMTVehicles a trouvé Vault installé sur votre serveur mais n'a pas pu localiser un plugin d'économie connecté. Utilisez '/mtv vault setup' pour réessayer."
+vaultSetupSuccess: "&aL'économie Vault a été configurée avec succès. MTVehicles utilisera désormais le plugin &f{plugin}&a pour gérer l'économie."
+vaultSetupFail: "&cNous n'avons pas pu configurer l'économie Vault. Veuillez vous assurer que vous avez un plugin d'économie installé et qu'il est compatible avec Vault."
+vaultSetupAlreadyHooked: "&cUn plugin d'économie a déjà été trouvé. Voir '/mtv vault' pour plus d'informations."
